--- a/index.css
+++ b/index.css
@@ -18,3 +18,18 @@ songs-1{
     overflow: auto;
     color: turquoise;
 }
+h1 {
+    color: blue;
+    text-align: center;
+  }
+  h2 {
+    font-style: italic;
+    text-align: center;
+    color: teal;
+  }
+  p {
+    color: gray;
+  }
+  body {
+    background-color: skyblue;
+  }
