--- a/index.css
+++ b/index.css
@@ -33,3 +33,10 @@ h1 {
   body {
     background-color: skyblue;
   }
+  .songs-2{
+      background-position: center;
+      height: 200px;
+      width: 46%;
+      overflow: auto;
+      color: #000;
+  }
