--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
 .styles"-h1, h2, p, and body to fit blue theme"
+h1 {
+    color: darkred;
+    text-align: center;
+  }
+  h2 {
+    font-style: italic;
+    text-align: center;
+    color: red;
+  }
+  p {
+    color: crimson;
+  }
+  body {
+    background-color: salmon;
+  }
