--- a/style.css
+++ b/style.css
@@ -14,3 +14,18 @@ h1 {
   body {
     background-color: salmon;
   }
+  h1 {
+    color: darkred;
+  }
+  h2 {
+    font-style: italic;
+    color: red;
+  }
+  p {
+    color: crimson;
+  }
+  body {
+    background-color: salmon;
+    font-family: sans-serif;
+    text-align: center;
+  }
