--- a/style.css
+++ b/style.css
@@ -29,3 +29,16 @@ h1 {
     font-family: sans-serif;
     text-align: center;
   }
+  p {
+    color: gray;
+  }
+  body {
+    background-color: skyblue;
+  }
+  .songs-2{
+      background-position: center;
+      height: 200px;
+      width: 46%;
+      overflow: auto;
+      color: #000;
+  }
