--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+html{
+  background-color: aqua;
+}
 container-wrapper{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: unset;
