--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html{
 container-wrapper{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: unset;
-    color: rgb(14, 207, 24);
+    color:black
 }
 songs-1{
    display: flex;
@@ -19,7 +19,7 @@ songs-1{
     height: 200px;
     width: 46%;
     overflow: auto;
-    color: turquoise;
+    color: black;
 }
 h1 {
     color: blue;
@@ -28,10 +28,10 @@ h1 {
   h2 {
     font-style: italic;
     text-align: center;
-    color: teal;
+    color:black;
   }
   p {
-    color: gray;
+    color: black;
   }
   body {
     background-color: skyblue;
@@ -43,3 +43,6 @@ h1 {
       overflow: auto;
       color: #000;
   }
+h1{
+
+}
